Add styling to sidebar

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <!-- main stylesheet -->
+    <!-- stylesheets -->
+    <link rel="stylesheet" href="./reset.css" type="text/css">
     <link rel="stylesheet" href="./application.css" type="text/css">
     <!-- javascript -->
     <script src="./bundle.js"></script>
