Style index component and add font awesome

--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <link rel="stylesheet" href="./application.css" type="text/css">
     <!-- javascript -->
     <script src="./bundle.js"></script>
+    <!-- font awesome -->
+    <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
 
     <title>UnifyId</title>
   </head>
 
   <body>
+    <div class="header-bar">
+      <img id="logo" src="./logo.png"></img>
+      <h1>UNIFY<strong>ID</strong></h1>
+    </div>
+
     <div id="root"></div>
   </body>
 </html>
